[tool.poetry]
name = "nexus"
version = "0.0.1"
description = "Backend API for Z3R0"
authors = ["null2264 <palembani@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.92.0"
"discord.py" = "2.2"
pyzmq = "25.0.0"
websockets = "^10.4"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
